@@ -574,7 +574,7 @@ ALTER TABLE `statut`
 -- Mise a jour avec la r78
 --
 
-UPDATE `piwam`.`acl_action` SET `libelle` = 'Éditer et configurer l''association' WHERE `acl_action`.`id` =1 LIMIT 1 ;
+UPDATE `acl_action` SET `libelle` = 'Éditer et configurer l''association' WHERE `acl_action`.`id` =1 LIMIT 1 ;
 
 --
 -- Mise a jour avec la r88
@@ -586,13 +586,13 @@ UPDATE `piwam`.`acl_action` SET `libelle` = 'Éditer et configurer l''associatio
 
 ALTER TABLE  `acl_credential` DROP FOREIGN KEY  `acl_credential_FK_1` ;
 
-ALTER TABLE  `acl_credential` ADD FOREIGN KEY (  `membre_id` ) REFERENCES  `piwam-test`.`membre` (
+ALTER TABLE  `acl_credential` ADD FOREIGN KEY (  `membre_id` ) REFERENCES  `membre` (
 `id`
 ) ON DELETE CASCADE ON UPDATE CASCADE ;
 
 ALTER TABLE  `acl_credential` DROP FOREIGN KEY  `acl_credential_FK_2` ;
 
-ALTER TABLE  `acl_credential` ADD FOREIGN KEY (  `acl_action_id` ) REFERENCES  `piwam-test`.`acl_action` (
+ALTER TABLE  `acl_credential` ADD FOREIGN KEY (  `acl_action_id` ) REFERENCES `acl_action` (
 `id`
 ) ON DELETE CASCADE ON UPDATE CASCADE ;
 
@@ -603,12 +603,12 @@ ALTER TABLE  `acl_credential` ADD FOREIGN KEY (  `acl_action_id` ) REFERENCES  `
 
 ALTER TABLE  `acl_action` DROP FOREIGN KEY  `acl_action_ibfk_1` ;
 
-ALTER TABLE  `acl_action` ADD FOREIGN KEY (  `acl_module_id` ) REFERENCES  `piwam-test`.`acl_module` (
+ALTER TABLE  `acl_action` ADD FOREIGN KEY (  `acl_module_id` ) REFERENCES `acl_module` (
 `id`
 ) ON DELETE CASCADE ON UPDATE CASCADE ;
 
 ALTER TABLE  `config_variable` DROP FOREIGN KEY  `config_variable_FK_1` ;
 
-ALTER TABLE  `config_variable` ADD FOREIGN KEY (  `categorie_code` ) REFERENCES  `piwam-test`.`config_categorie` (
+ALTER TABLE  `config_variable` ADD FOREIGN KEY (  `categorie_code` ) REFERENCES  `config_categorie` (
 `code`
 ) ON DELETE CASCADE ON UPDATE CASCADE ;
